# scripted-mixer-gstreamer

./: Cargo.toml  README.md
patterns/: sample.txt
src/: main.rs
src/error/: mod.rs
src/gtk_manage/: mod.rs  window.rs
src/script/: action.rs  mod.rs
