[package]
name = "live-mix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.18.3"
gstreamer-video = { version = "0.18.3", features = ["dox"]}
simple-error = "0.2.3"
x11 = "2.19.1"
gdkx11 = "0.15.1"
cairo-rs = "0.15.1"
gtk = "0.15.3"
crossbeam-channel = "0.5.2"